[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/GUI/GameTitleLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GUI/GameVersionLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GUI/QuitToDesktopButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GUI/SceneLoaderButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_menu.gd" type="Script" id=5]
[ext_resource path="res://CreditsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitleLabel" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -227.0
margin_right = 226.0
margin_bottom = 226.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_bottom = 83.0
focus_neighbour_left = NodePath("../QuitToDesktopButton")
focus_neighbour_top = NodePath("../QuitToDesktopButton")
focus_neighbour_right = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
text = "play"
scene_to_load_path = "res://Scenes/Game.tscn"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 453.0
margin_bottom = 206.0
focus_neighbour_left = NodePath("../PlayButton")
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_right = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../CreditsButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "options"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 453.0
margin_bottom = 329.0
focus_neighbour_left = NodePath("../OptionsButton")
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_right = NodePath("../QuitToDesktopButton")
focus_neighbour_bottom = NodePath("../QuitToDesktopButton")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "credits"

[node name="QuitToDesktopButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 369.0
focus_neighbour_left = NodePath("../CreditsButton")
focus_neighbour_top = NodePath("../CreditsButton")
focus_neighbour_right = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../PlayButton")

[node name="GameVersionLabel" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 671.0
margin_top = -133.0
margin_right = -671.0
margin_bottom = -47.0
align = 1
valign = 1

[node name="MenusToDisplay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="MenusToDisplay" instance=ExtResource( 7 )]
visible = false

[node name="CreditsMenu" parent="MenusToDisplay" instance=ExtResource( 6 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"
